--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -44,7 +44,7 @@ components:
 commands:
   - id: pip-install-requirements
     exec:
-      commandLine: pip install -r requirements.txt
+      commandLine: python -m ensurepip && pip install -r requirements.txt
       workingDir: ${PROJECT_SOURCE}
       group:
         kind: build
