--- a/.devfile.yaml
+++ b/.devfile.yaml
@@ -44,7 +44,7 @@ components:
 commands:
   - id: pip-install-requirements
     exec:
-      commandLine: python -m ensurepip && pip install -r requirements.txt
+      commandLine: python -m ensurepip && pip3 install -r requirements.txt
       workingDir: ${PROJECT_SOURCE}
       group:
         kind: build
@@ -52,7 +52,7 @@ commands:
       component: py
   - id: run-app
     exec:
-      commandLine: 'python src/app.py'
+      commandLine: 'python app.py'
       workingDir: ${PROJECT_SOURCE}
       component: py
       group:
@@ -60,7 +60,7 @@ commands:
         isDefault: true
   - id: debug-py
     exec:
-      commandLine: 'pip install debugpy && python -m debugpy --listen 0.0.0.0:${DEBUG_PORT} src/app.py'
+      commandLine: 'pip install debugpy && python -m debugpy --listen 0.0.0.0:${DEBUG_PORT} app.py'
       workingDir: ${PROJECT_SOURCE}
       component: py
       group:
